@startuml
skinparam style strictuml
skinparam PackageStyle rectangle

' --- TOP LEVEL ---
abstract class Person {
    - DEFAULT_ID: int
    - ID_FORMAT: String
    - name: Name
    + Person(Name)
    + getName(): Name
    + isSamePerson(): Boolean
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

' --- MIDDLE LEVEL ---
class ContactPerson extends Person {
    - email: Email
    - phone: Phone
    + ContactPerson(Name, Phone, Email)
    + getPhone(): Phone
    + setPhone(Phone): void
    + getEmail(): Email
    + setEmail(Email): void
    + isSamePerson(): Boolean
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
    ' TODO: Implement contact validation and persistence
}

class EmergencyContact {
    - contactPerson: ContactPerson
    - relationship: String
    + EmergencyContact(ContactPerson, String)
    + getContactPerson(): ContactPerson
    + setEmergencyEmail(Email): void
    + setEmergencyPhone(Phone): void
    + getRelationship(): String
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

class Patient extends Person {
    - DEFAULT_PATIENT_ID: int
    - patientId: int
    - nric: NRIC
    - dateOfBirth: Date
    - sex: Sex
    - allergies: Set<String>
    - emergencyContacts: Set<EmergencyContact>
    - diagnoses: List<Diagnosis>
    - address: Address
    + Patient(NRIC, Name, Phone, Email, Address)
    + getNRIC(): NRIC
    + getPatientId(): int
    + getDateOfBirth(): Date
    + getAge(): int
    + getSex(): Sex
    + getAllergies: Set<String>
    + getEmergencyContact(): Set<EmergencyContact>
    + getDiagnosis(): Set<Diagnosis>
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

abstract class Staff extends Person {
    - DEFAULT_STAFF_ID: int
    - staffId: int
    + Staff(Name, Phone, Email)
    + getStaffId(): int
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

' --- STAFF SPECIALIZATION ---
class Doctor extends Staff {
    + Doctor(Name, Phone, Email)
    + diagnose(Patient, Diagnosis): void
    + updateDiagnosis(Diagnosis, Diagnosis): void
    + prescribe(Patient, Prescription): void
    + updatePrescription(Prescription, Prescription): void
    + viewPatientHistory(Patient): void
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

class Pharmacist extends Staff {
    + Pharmacist(Name, Phone, Email)
    + updatePrescription(Prescription, Prescription): void
    + dispensePrescription(Prescription): void
    + viewPatientHistory(Patient): void
    + equals(): Boolean
    + hashcode(): int
    + toString(): String
}

' --- BOTTOM LEVEL (Artifacts) ---
class Diagnosis {
    - conditionCode: String
    - description: String
    - timestamp: DateTime
    - doctor: Doctor
    - prescription: Prescription
    + Diagnosis(doctor: Doctor, condition: String, description: String)
    + setPrescription(Prescription): void
    + getPrescription(): Prescription
    + getDoctor(): Doctor
    + getSummary(): String
    + equals(o: Object): boolean
    + hashcode(): int
    + toString(): String
}

class Prescription {
    - medicationName: String
    - dosage: String
    - frequency: String
    - isFulfilled: boolean
    - expiryDate: Date
    + Prescription(medication: String, dosage: String, expiry: Date)
    + markAsCompleted(): void
    + equals(o: Object): boolean
    + hashcode(): int
    + toString(): String
}

' --- Logic Connections ---
Patient "1" *-- "1..*" EmergencyContact
Doctor "1" --> "*" Diagnosis : creates
Diagnosis "1" --> "0..1" Prescription : generates
Pharmacist "1" ..> "1" Prescription : processes

@enduml
